--- a/src/app/layout/homepage/page-content/image-slider/image-slider.component.html
+++ b/src/app/layout/homepage/page-content/image-slider/image-slider.component.html
@@ -1,4 +1,4 @@
-<div class="card-container">
+<div [ngClass]="{'card-container':true, 'dark-card-container' :( property.nightmode | async)}">
   <mat-card class="img-card">
     <img
       class="card-image"
