--- a/src/app/shared/list-products/list-products.component.html
+++ b/src/app/shared/list-products/list-products.component.html
@@ -1,4 +1,4 @@
-<div class="containerr">
+<div [ngClass]="{'containerr': true , 'dark-containerr' :( property.nightmode | async)}">
   <div class="product-list">
     <div class="roww">
       <div class="three six" *ngFor="let item of productitems index as i">
