--- a/src/assets/css/var.scss
+++ b/src/assets/css/var.scss
@@ -17,13 +17,19 @@ $darkblue: #673ab7;
 $blue: #3f51b5;
 
 $green: #69f0ae;
-$darkgree: #149c17;
-
+$darkgreen: #149c17;
+$darkergreen: #28a745;
 $purple: #9c27b0;
+$darkpurple: #7b1fa2;
 $lightestgrey: #e8eaec;
-$grey: #607d8b;
+
+$lightgrey: #607d8b;
+$grey: rgba(47, 47, 47, 0.84);
 $darkgray: #424242;
+$darkergray: #303030;
+$cardgray: #5d5d5d;
 $darkest: #222222;
+
 $lighterrblack: rgba(0, 0, 0, 0.12);
 $lighterblack: rgba(0, 0, 0, 0.87);
 $black: #000000;
