--- a/src/app/features/user-management/contact/contact.component.html
+++ b/src/app/features/user-management/contact/contact.component.html
@@ -1,5 +1,8 @@
 <app-navbar (IsFullscreen)="fullscreenstatus($event)" [isHidden]="true"></app-navbar>
-<div class="input-template" [ngStyle]="{'padding-top': padding + 'px'}">
+<div
+  [ngClass]="{'input-template':true, 'dark-input-template' :( property.nightmode | async)}"
+  [ngStyle]="{'padding-top': padding + 'px'}"
+>
   <mat-card class="input-card box-elevation-z8">
     <mat-card-header>
       <mat-card-title>Contact Us</mat-card-title>
@@ -65,7 +68,7 @@
       </mat-form-field>
     </form>
     <mat-card-content> </mat-card-content>
-    <mat-card-actions>
+    <div class="mat-actions">
       <button
         mat-raised-button
         [disabled]="contactform.invalid"
@@ -74,7 +77,7 @@
       >
         SEND
       </button>
-    </mat-card-actions>
+    </div>
   </mat-card>
 </div>
 <app-footer></app-footer>
