--- a/src/app/features/user-management/contact/contact.component.scss
+++ b/src/app/features/user-management/contact/contact.component.scss
@@ -8,6 +8,11 @@
         top: 15px;
       }
     }
+    .mat-actions {
+      text-align: center;
+      font-size: 10px;
+      display: block;
+    }
     width: 100%;
     height: 100%;
     min-width: 100%;
