--- a/src/app/layout/homepage/page-content/category-tiles/category-tiles.component.scss
+++ b/src/app/layout/homepage/page-content/category-tiles/category-tiles.component.scss
@@ -26,3 +26,19 @@
     }
   }
 }
+.dark-wrap {
+  .product-list {
+    .review-card {
+      // border: 1px solid #d8d8d8;
+      background-color: $cardgray !important;
+      &:hover {
+        background-color: $darkgray !important;
+      }
+    }
+    .display-text {
+      &:hover {
+        color: $white !important;
+      }
+    }
+  }
+}
