--- a/src/app/shared/filter-input/filter-input.component.html
+++ b/src/app/shared/filter-input/filter-input.component.html
@@ -1,4 +1,4 @@
-<div class="filter-input">
+<div [ngClass]="{'filter-input':true, 'dark-filter-input' :( property.nightmode | async)}">
   <mat-form-field appearance="outline">
     <mat-label>{{'shared.filter.search' | translate}}</mat-label>
     <input matInput placeholder="{{'shared.filter.type' | translate}}" />
