--- a/src/app/shared/jumbotron/jumbotron.component.html
+++ b/src/app/shared/jumbotron/jumbotron.component.html
@@ -1,3 +1,3 @@
-<mat-toolbar class="jumbotronn">
+<mat-toolbar [ngClass]="{'jumbotronn': true , 'dark-jumbotronn' :( property.nightmode | async)}">
   <div class="jumbotron-heading">{{ Heading | translate | uppercase}}</div>
 </mat-toolbar>
