--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -2,8 +2,8 @@
 .nav-bar {
   z-index: 1000;
   top: 0;
-  background-color: $darkblue;
-  color: $white;
+  background-color: $darkblue !important;
+  color: $white !important;
   position: sticky !important;
   box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 6px 10px 0px rgba(0, 0, 0, 0.14),
     0px 1px 18px 0px rgba(0, 0, 0, 0.12);
@@ -48,6 +48,43 @@
   }
   .example-spacer {
     flex: 1 1 auto;
+  }
+  .navbar-buttons {
+    .mat-raised-button {
+      color: $lighterblack;
+      background-color: $white;
+    }
+  }
+}
+.black-nav-bar {
+  ::ng-deep .mat-menu-panel {
+    background-color: $darkgray !important;
+    color: $white !important;
+    .mat-menu-item {
+      background: transparent !important;
+      color: $white !important;
+      :hover {
+        background: rgba(255, 255, 255, 0.04);
+      }
+    }
+    .mat-menu-item .mat-icon-no-color, //aa important che main line
+    .mat-menu-item-submenu-trigger::after {
+      color: white;
+    }
+  }
+  background-color: $darkpurple !important;
+  color: $white;
+  .nav-button {
+    color: $white;
+  }
+  .search-bar {
+    .mat-form-field-wrapper {
+      .mat-form-field-flex {
+        .mat-form-field-outline {
+          color: black;
+        }
+      }
+    }
   }
   .navbar-buttons {
     .mat-raised-button {
