--- a/src/app/shared/product-carousel2/product-carousel2.component.scss
+++ b/src/app/shared/product-carousel2/product-carousel2.component.scss
@@ -1,29 +1,4 @@
 @import '../../../assets/css/var.scss';
-body {
-  background: #e2eaef;
-  font-family: 'Open Sans', sans-serif;
-}
-h2 {
-  color: #000;
-  font-size: 26px;
-  font-weight: 300;
-  text-align: center;
-  text-transform: uppercase;
-  position: relative;
-  margin: 30px 0 60px;
-}
-h2::after {
-  content: '';
-  width: 100px;
-  position: absolute;
-  margin: 0 auto;
-  height: 4px;
-  border-radius: 1px;
-  background: #673ab7;
-  left: 0;
-  right: 0;
-  bottom: -20px;
-}
 
 .containerr {
   width: 100%;
@@ -33,6 +8,27 @@ h2::after {
   margin-right: auto;
   margin-left: auto;
   // max-width: 960px;
+  h2 {
+    color: #000;
+    font-size: 26px;
+    font-weight: 300;
+    text-align: center;
+    text-transform: uppercase;
+    position: relative;
+    margin: 30px 0 60px;
+  }
+  h2::after {
+    content: '';
+    width: 100px;
+    position: absolute;
+    margin: 0 auto;
+    height: 4px;
+    border-radius: 1px;
+    background: #673ab7;
+    left: 0;
+    right: 0;
+    bottom: -20px;
+  }
   .roww {
     margin-right: -15px;
     margin-left: -15px;
@@ -58,118 +54,143 @@ h2::after {
       }
     }
   }
-}
-.carousel-indicators li {
-  background: rgba(0, 0, 0, 0.2);
-}
-.carousel-indicators li.active {
-  background: rgba(0, 0, 0, 0.6);
-}
-.carousel .thumb-wrapper {
-  padding: 25px 15px;
-  background: #fff;
-  border-radius: 6px;
-  text-align: center;
-  position: relative;
-  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
-  border: 1px solid #673ab7;
-  &:hover {
-    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
-      0 3px 14px 2px rgba(0, 0, 0, 0.12);
-    border: 2px solid #673ab7;
+  .carousel-indicators li {
+    background: rgba(0, 0, 0, 0.2);
+  }
+  .carousel-indicators li.active {
+    background: rgba(0, 0, 0, 0.6);
+  }
+  .carousel .thumb-wrapper {
+    padding: 25px 15px;
+    background: #fff;
+    border-radius: 6px;
+    text-align: center;
+    position: relative;
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
+    border: 1px solid #673ab7;
+    &:hover {
+      box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+        0 3px 14px 2px rgba(0, 0, 0, 0.12);
+      border: 2px solid #673ab7;
 
-    // transform: translateY(-1px);
+      // transform: translateY(-1px);
+    }
+  }
+  .carousel .item .img-box {
+    height: 120px;
+    margin-bottom: 20px;
+    width: 100%;
+    position: relative;
+  }
+  .carousel .item img {
+    max-width: 100%;
+    max-height: 100%;
+    display: inline-block;
+    position: absolute;
+    bottom: 0;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+  }
+  .carousel .item h4 {
+    font-size: 18px;
+  }
+  .carousel .item h4,
+  .carousel .item p,
+  .carousel .item ul {
+    margin-bottom: 5px;
+  }
+  .carousel .thumb-content .btn {
+    background-color: $blue;
+    color: $white;
+  }
+  .carousel .thumb-content .btn i {
+    font-size: 14px;
+    font-weight: bold;
+    margin-left: 5px;
+  }
+  .carousel .carousel-control {
+    height: 44px;
+    width: 40px;
+    background: #673ab7;
+    margin: auto 0;
+    border-radius: 4px;
+    opacity: 1;
+  }
+  .carousel .carousel-control:hover {
+    background: #42217c;
+    opacity: 1;
+  }
+  .carousel .carousel-control i {
+    font-size: 36px;
+    position: absolute;
+    top: 50%;
+    display: inline-block;
+    margin: -19px 0 0 0;
+    z-index: 5;
+    left: 0;
+    right: 0;
+    color: #fff;
+    text-shadow: none;
+    font-weight: bold;
+  }
+  .carousel .item-price {
+    font-size: 13px;
+    padding: 2px 0;
+  }
+  .carousel .carousel-control.left i {
+    margin-left: -2px;
+  }
+  .carousel .carousel-control.right i {
+    margin-right: -4px;
+  }
+
+  .carousel .wish-icon {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    z-index: 99;
+    cursor: pointer;
+    font-size: 16px;
+    color: #abb0b8;
   }
 }
-.carousel .item .img-box {
-  height: 120px;
-  margin-bottom: 20px;
-  width: 100%;
-  position: relative;
-}
-.carousel .item img {
-  max-width: 100%;
-  max-height: 100%;
-  display: inline-block;
-  position: absolute;
-  bottom: 0;
-  margin: 0 auto;
-  left: 0;
-  right: 0;
-}
-.carousel .item h4 {
-  font-size: 18px;
-}
-.carousel .item h4,
-.carousel .item p,
-.carousel .item ul {
-  margin-bottom: 5px;
-}
-.carousel .thumb-content .btn {
-  color: #673ab7;
-  font-size: 11px;
-  text-transform: uppercase;
-  font-weight: bold;
-  background: none;
-  border: 1px solid #673ab7;
-  padding: 6px 14px;
-  margin-top: 5px;
-  line-height: 16px;
-  border-radius: 20px;
-}
-.carousel .thumb-content .btn:hover,
-.carousel .thumb-content .btn:focus {
-  color: #fff;
-  background: #673ab7;
-  box-shadow: none;
-}
-.carousel .thumb-content .btn i {
-  font-size: 14px;
-  font-weight: bold;
-  margin-left: 5px;
-}
-.carousel .carousel-control {
-  height: 44px;
-  width: 40px;
-  background: #673ab7;
-  margin: auto 0;
-  border-radius: 4px;
-  opacity: 1;
-}
-.carousel .carousel-control:hover {
-  background: #42217c;
-  opacity: 1;
-}
-.carousel .carousel-control i {
-  font-size: 36px;
-  position: absolute;
-  top: 50%;
-  display: inline-block;
-  margin: -19px 0 0 0;
-  z-index: 5;
-  left: 0;
-  right: 0;
-  color: #fff;
-  text-shadow: none;
-  font-weight: bold;
-}
-.carousel .item-price {
-  font-size: 13px;
-  padding: 2px 0;
-}
-.carousel .carousel-control.left i {
-  margin-left: -2px;
-}
-.carousel .carousel-control.right i {
-  margin-right: -4px;
-}
+.dark-containerr {
+  h2 {
+    color: $darkpink;
+  }
+  h2::after {
+    background: $blue;
+  }
 
-.carousel .wish-icon {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  z-index: 99;
-  cursor: pointer;
-  font-size: 16px;
-  color: #abb0b8;
+  .carousel-indicators li {
+    background: rgba(255, 255, 255, 0.2);
+  }
+  .carousel-indicators li.active {
+    background: rgba(255, 255, 255, 0.6);
+  }
+  .carousel .thumb-wrapper {
+    background: $darkgray;
+    box-shadow: 0 2px 3px rgba(255, 255, 255, 0.2);
+    border: 1px solid $white;
+    &:hover {
+      box-shadow: 0 5px 5px -3px rgba(255, 255, 255, 0.2), 0 8px 10px 1px rgba(255, 255, 255, 0.14),
+        0 3px 14px 2px rgba(255, 255, 255, 0.12);
+      border: 2px solid $white;
+    }
+  }
+
+  .carousel .thumb-content .btn {
+    background: $purple;
+    color: $white;
+  }
+  .carousel .carousel-control {
+    background: $purple;
+    &:hover {
+      background-color: $darkpurple;
+    }
+  }
+  .carousel .wish-icon {
+    color: $raspberry;
+  }
 }
