--- a/src/app/shared/product-carousel2/product-carousel2.component.html
+++ b/src/app/shared/product-carousel2/product-carousel2.component.html
@@ -27,7 +27,9 @@
                       <h4>{{item.name}}</h4>
 
                       <p class="item-price"><b>{{item.price}}</b></p>
-                      <button class="btn" mat-raised-button>{{'user.product.add_to_cart' | translate }}</button>
+                      <button class="btn" mat-raised-button>
+                        {{'user.product.add_to_cart' | translate }}
+                      </button>
                     </div>
                   </mat-card>
                 </div>
@@ -47,7 +49,9 @@
                       <h4>{{item.name}}</h4>
 
                       <p class="item-price"><b>{{item.price}}</b></p>
-                      <button class="btn" mat-raised-button>{{'user.product.add_to_cart' | translate }}</button>
+                      <button class="btn" mat-raised-button>
+                        {{'user.product.add_to_cart' | translate }}
+                      </button>
                     </div>
                   </mat-card>
                 </div>
@@ -67,7 +71,9 @@
                       <h4>{{item.name}}</h4>
 
                       <p class="item-price"><b>{{item.price}}</b></p>
-                      <button class="btn" mat-raised-button>{{'user.product.add_to_cart' | translate }}</button>
+                      <button class="btn" mat-raised-button>
+                        {{'user.product.add_to_cart' | translate }}
+                      </button>
                     </div>
                   </mat-card>
                 </div>
