--- a/src/app/features/admin-management/user-components/view-users/view-users.component.html
+++ b/src/app/features/admin-management/user-components/view-users/view-users.component.html
@@ -1,5 +1,5 @@
 <app-jumbotron [Heading]="'admin.main_heading.all_users'"></app-jumbotron>
-<app-spinner [loading]="dataLoading" class="spinner"></app-spinner>
+<app-spinner [loading]="dataLoading" class="centree-spinner"></app-spinner>
 <div class="outer-wrap">
   <mat-card class="display-products-card">
     <mat-card-content>
