--- a/src/app/features/cart-management/view-cartitems/view-cartitems.component.html
+++ b/src/app/features/cart-management/view-cartitems/view-cartitems.component.html
@@ -108,7 +108,7 @@
       </div>
     </div>
   </div> -->
-<app-spinner [loading]="dataLoading" *ngIf="dimmed" class="spinner"></app-spinner>
+<app-spinner [loading]="dataLoading" *ngIf="dimmed" class="centre-spinner"></app-spinner>
 
 <div class="table-wrapper" [ngClass]="{dimmed: dimmed}">
   <mat-table
