--- a/src/app/features/product-management/productcompare/productcompare.component.html
+++ b/src/app/features/product-management/productcompare/productcompare.component.html
@@ -1,6 +1,6 @@
 <app-navbar [isHidden]="true"></app-navbar>
 <app-jumbotron [Heading]="'user.main_heading.product_comparison'"></app-jumbotron>
-<app-spinner [loading]="dataLoading" *ngIf="dimmed" class="spinner"></app-spinner>
+<app-spinner [loading]="dataLoading" *ngIf="dimmed" class="centre-spinner"></app-spinner>
 
 <div [ngClass]="{ dimmed: dimmed }">
   <div class="space-medium">
