--- a/src/assets/css/Globalportal.scss
+++ b/src/assets/css/Globalportal.scss
@@ -1,8 +1,8 @@
 @import 'variable';
 @import 'u-general';
 @import 'c-angular-component';
-@import 'primeNG';
-@import 'module';
+// @import 'primeNG';
+// @import 'module';
 
 * {
   box-sizing: border-box;
