--- a/src/assets/css/black-component.scss
+++ b/src/assets/css/black-component.scss
@@ -1,5 +1,11 @@
 @import './var.scss';
 
+.dark-body {
+  color: $white;
+  background-color: $darkergray;
+  min-height: 100vh;
+}
+
 .dark-space-medium {
   .showcase-block {
     background-color: $cardgray !important;
@@ -18,36 +24,26 @@
   }
 }
 .dark-input-template {
-  background-color: $darkergray;
   .input-card {
     color: $white;
     background-color: $cardgray;
     &.mat-card {
       .mat-card-header {
-        // background-color: rgb(54, 54, 54);
         background-color: $blueberry;
         .mat-card-title {
           color: $white;
         }
       }
-      .mat-raised-button {
-        width: 72%;
-        height: 45px;
-        margin-bottom: 20px;
-        border-radius: 20px;
-        font-size: 18px;
-      }
       .signin-btn {
         border: 3px solid #28a745;
         color: #28a745;
+
         &:hover {
           color: white;
           background-color: #28a745;
         }
       }
       .blue-btn {
-        border: 2px solid $white;
-        color: $white;
         &:hover {
           color: white;
           background-color: $blueberry;
@@ -77,34 +73,49 @@
       }
     }
     .input-form {
+      .mat-select-arrow {
+        color: rgba(255, 255, 255, 0.54);
+      }
       .mat-select-value {
         color: rgba(255, 255, 255, 0.87) !important;
       }
+      .mat-form-field-appearance-legacy .mat-form-field-underline {
+        background-color: rgba(255, 255, 255, 0.7);
+      }
       .mat-form-field.mat-focussed.mat-form-field-ripple {
         background-color: $darkpurple !important;
+      }
+      .mat-form-field-invalid .mat-input-element {
+        caret-color: $red !important;
+      }
+      .mat-form-field.mat-form-field-invalid .mat-form-field-label {
+        color: $red !important;
+      }
+      .mat-form-field.mat-form-field-invalid .mat-form-field-outline {
+        color: $red !important;
+      }
+      .mat-form-field.mat-form-field-invalid .mat-form-field-ripple,
+      .mat-form-field.mat-form-field-invalid .mat-form-field-ripple.mat-accent {
+        background-color: $red !important;
       }
       .mat-form-field-appearance-outline .mat-form-field-outline-thick {
-        color: rgba(255, 255, 255, 0.87) !important;
+        color: rgba(255, 255, 255, 0.87);
       }
       .mat-form-field-appearance-outline .mat-form-field-outline {
-        color: rgba(255, 255, 255, 0.52) !important;
+        color: rgba(255, 255, 255, 0.42);
       }
-      .mat-form-field.mat-focussed.mat-form-field-ripple {
-        background-color: $darkpurple !important;
+      .mat-form-field-appearance-legacy .mat-form-field-label {
+        color: rgba(255, 255, 255, 0.7);
       }
       .mat-input-element::placeholder {
         color: rgba(255, 255, 255, 0.7) !important;
       }
       .input-full-width {
-        margin-bottom: 10px;
-        width: 100%;
         .mat-input-element {
-          margin-top: 1em;
           caret-color: $darkpurple !important;
         }
         .mat-form-field-label {
           color: rgba(255, 255, 255, 0.7) !important;
-          font-size: 17px;
         }
       }
     }
