--- a/src/assets/css/shared-common.scss
+++ b/src/assets/css/shared-common.scss
@@ -80,3 +80,20 @@
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14),
     0px 1px 10px 0px rgba(0, 0, 0, 0.12) !important;
 }
+//--------------------------- Background Effect on Table and cards ------------------------------
+
+.centree-spinner {
+  position: absolute !important;
+  top: 50%;
+  left: 47%;
+}
+.centre-spinner {
+  position: absolute !important;
+  top: 50%;
+  left: 48.5%;
+}
+.centre-product-spinner {
+  position: absolute !important;
+  top: 35%;
+  left: 48.5%;
+}
