--- a/src/assets/css/var.scss
+++ b/src/assets/css/var.scss
@@ -6,12 +6,13 @@ $page-header-height: 70px; // page header height
 /* css colors
 --------------------------*/
 $white: #ffffff;
-
+$lightwhite: #ffffffef;
 $red: #f44336;
 $raspberry: #e2382c;
 
 $yellow: #ffd740;
 
+$skyblue: #33b5e5;
 $blueberry: #106cc8;
 $darkblue: #673ab7;
 $blue: #3f51b5;
@@ -28,6 +29,7 @@ $grey: rgba(47, 47, 47, 0.84);
 $darkgray: #424242;
 $darkergray: #303030;
 $cardgray: #5d5d5d;
+$darkcardgray: #525252;
 $darkest: #222222;
 
 $lighterrblack: rgba(0, 0, 0, 0.12);
