--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,9 +4,9 @@
 @import 'assets/css/white-component.scss';
 @import 'assets/css/black-component.scss';
 @import 'assets/css/pre-loader.scss';
-@import 'assets/css/var.scss';
 
 @import 'assets/css/white-angular-components.scss';
+@import 'assets/css/forced-angular-components.scss';
 
 .list-product-style {
   // overflow: hidden !important;
