--- a/src/app/core/auth-management/login/login.component.html
+++ b/src/app/core/auth-management/login/login.component.html
@@ -33,7 +33,7 @@
       </mat-form-field>
     </form>
     <mat-card-content> </mat-card-content>
-    <mat-card-actions [ngClass]="{dimmed: show}">
+    <mat-card-actions class="mat-actions" [ngClass]="{dimmed: show}">
       <button mat-raised-button class="signin-btn" [disabled]="loginform.invalid" (click)="login()">
         {{"user.form.sign_in" | translate}}
       </button>
