--- a/src/app/features/user-management/contact/contact.component.scss
+++ b/src/app/features/user-management/contact/contact.component.scss
@@ -1,3 +1,4 @@
+@import '../../../../assets/css/var.scss';
 .input-template {
   padding: 40px 250px 50px 250px;
   height: 100%;
@@ -25,3 +26,4 @@
     }
   }
 }
+
