--- a/src/app/features/user-management/profile/buy-list/buy-list.component.html
+++ b/src/app/features/user-management/profile/buy-list/buy-list.component.html
@@ -1,4 +1,4 @@
-<app-spinner [loading]="dataLoading" class="spinner"></app-spinner>
+<app-spinner [loading]="dataLoading" class="centree-spinner"></app-spinner>
 
 <div
   class="big-input-container"
