--- a/src/app/features/user-management/register/register.component.html
+++ b/src/app/features/user-management/register/register.component.html
@@ -73,7 +73,7 @@
     </form>
     <br />
     <mat-card-content> </mat-card-content>
-    <mat-card-actions>
+    <mat-card-actions  class="mat-actions">
       <button
         mat-raised-button
         [disabled]="registerform.invalid"
