--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -57,21 +57,6 @@
   }
 }
 .black-nav-bar {
-  ::ng-deep .mat-menu-panel {
-    background-color: $darkgray !important;
-    color: $white !important;
-    .mat-menu-item {
-      background: transparent !important;
-      color: $white !important;
-      :hover {
-        background: rgba(255, 255, 255, 0.04);
-      }
-    }
-    .mat-menu-item .mat-icon-no-color, //aa important che main line
-    .mat-menu-item-submenu-trigger::after {
-      color: white;
-    }
-  }
   background-color: $darkpurple !important;
   color: $white;
   .nav-button {
@@ -88,8 +73,23 @@
   }
   .navbar-buttons {
     .mat-raised-button {
-      color: $lighterblack;
-      background-color: $white;
+      color: $lightwhite;
+      background-color: $darkergray;
     }
+  }
+}
+:host ::ng-deep .mat-menu-panel {
+  background-color: $darkgray !important;
+  color: $white !important;
+  .mat-menu-item {
+    background: transparent !important;
+    color: $white !important;
+    :hover {
+      background: rgba(255, 255, 255, 0.04);
+    }
+  }
+  .mat-menu-item .mat-icon-no-color, //aa important che main line
+  .mat-menu-item-submenu-trigger::after {
+    color: white;
   }
 }
