--- a/src/assets/css/shared-common.scss
+++ b/src/assets/css/shared-common.scss
@@ -97,3 +97,28 @@
   top: 35%;
   left: 48.5%;
 }
+//--------------------------- Bottom Action button ------------------------------
+
+.bottom-action-bar {
+  z-index: 2;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  justify-content: flex-end;
+  right: 0;
+  height: 56px;
+  box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.08), 0 -2px 8px rgba(0, 0, 0, 0.12);
+  background-color: $darkblue;
+  padding: 11px 15px;
+  button {
+    margin: 0 2px;
+  }
+  .first-btn {
+    color: $white;
+    background-color: $darkpink;
+  }
+  .second-btn {
+    color: $white;
+    background-color: $red;
+  }
+}
