--- a/src/app/features/admin-management/product-components/update-product/update/update.component.html
+++ b/src/app/features/admin-management/product-components/update-product/update/update.component.html
@@ -186,12 +186,12 @@
     </mat-card-content>
   </mat-card>
 </div>
-<mat-toolbar color="primary" class="c-bottom-action-bar u-text-right">
-  <button id="btnSave" mat-flat-button (click)="UpdateProduct()">
+<mat-toolbar   [ngClass]="{'bottom-action-bar': true,'dark-bottom-action-bar' :( property.nightmode | async)}">
+  <button class="first-btn" id="btnSave" mat-flat-button (click)="UpdateProduct()">
     {{"admin.productform.save" | translate}}
   </button>
   &nbsp;&nbsp;
-  <button id="btnCancel" mat-flat-button (click)="cancel()" color="warn">
+  <button class="second-btn" id="btnCancel" mat-flat-button (click)="cancel()">
     {{"admin.productform.cancel" | translate}}
   </button>
 </mat-toolbar>
