--- a/src/app/shared/quickview/quickview.component.html
+++ b/src/app/shared/quickview/quickview.component.html
@@ -1,39 +1,16 @@
-<div>
+<div [ngClass]="{'quick-view':true, 'dark-quick-view' :( property.nightmode | async)}">
   <mat-card class="quick-view-card">
     <div fxLayout="row" fxLayoutAlign="start">
       <div fxFlex="50%">
         <div class="preview-pic tab-content">
           <div class="tab-pane active" id="pic-1">
             <img [src]="myThumbnail1" />
-            <!-- <ngx-image-zoom
-              [thumbImage]="myThumbnail1"
-              [magnification]="1.5"
-              [enableScrollZoom]="true"
-              [lensWidth]="100"
-              [lensHeight]="100"
-            ></ngx-image-zoom> -->
           </div>
           <div class="tab-pane" id="pic-2">
             <img [src]="myThumbnail2" />
-            <!-- <ngx-image-zoom
-              [thumbImage]="myThumbnail2"
-              [magnification]="1.5"
-              [enableScrollZoom]="true"
-              [enableLens]="true"
-              [lensWidth]="100"
-              [lensHeight]="100"
-            ></ngx-image-zoom> -->
           </div>
           <div class="tab-pane" id="pic-3">
             <img [src]="myThumbnail3" />
-            <!-- <ngx-image-zoom
-              [thumbImage]="myThumbnail3"
-              [magnification]="1.5"
-              [enableScrollZoom]="true"
-              [enableLens]="true"
-              [lensWidth]="100"
-              [lensHeight]="100"
-            ></ngx-image-zoom> -->
           </div>
         </div>
         <ul class="preview-thumbnail nav nav-tabs">
