--- a/src/app/shared/reviews-viewer/reviews-viewer.component.html
+++ b/src/app/shared/reviews-viewer/reviews-viewer.component.html
@@ -3,7 +3,7 @@
   *ngIf="dimmed"
   style="position: absolute;top: 30%;left: 50%;z-index: 999;"
 ></app-spinner>
-<div class="review-container">
+<div [ngClass]="{'review-container':true, 'dark-review-container' :( property.nightmode | async)}">
   <mat-card class="box-elevation-z8">
     <mat-list>
       <div mat-subheader>
@@ -26,7 +26,7 @@
         <ng-container *ngFor="let review of reviews">
           <mat-list-item>
             <mat-icon mat-list-icon>star</mat-icon>
-            <div mat-line>{{review.username}}</div>
+            <div class="username" mat-line>{{review.username}}</div>
             <div mat-line>{{review.review}}</div>
             <button
               *ngIf="isUserReview(review.username)"
