--- a/src/assets/css/var.scss
+++ b/src/assets/css/var.scss
@@ -20,10 +20,13 @@ $blue: #3f51b5;
 $green: #69f0ae;
 $darkgreen: #149c17;
 $darkergreen: #28a745;
+
 $purple: #9c27b0;
 $darkpurple: #7b1fa2;
-$lightestgrey: #e8eaec;
 
+$lightestgrey: #e8eaec;
+$lightestgray: rgb(160, 160, 160);
+$lightergray: #616161;
 $lightgrey: #607d8b;
 $grey: rgba(47, 47, 47, 0.84);
 $darkgray: #424242;
